<?xml version="1.0" encoding="utf-8" ?>
<shortcuts
	xmlns:android="http://schemas.android.com/apk/res/android">

	<shortcut android:shortcutId="open_main"
		android:enabled="true" android:icon="@mipmap/home_shortcut"
		android:shortcutShortLabel="@string/shortcut_main_short"
		android:shortcutLongLabel="@string/shortcut_main_long">
		<intent android:action="android.intent.action.VIEW"
			android:targetPackage="com.app.resultviewbd"
			android:targetClass="com.app.resultviewbd.activity.MainActivity" />
		<categories android:name="android.shortcut.filter" />
	</shortcut>

	<shortcut android:shortcutId="open_settings"
		android:enabled="true" android:icon="@mipmap/settings_shortcut"
		android:shortcutShortLabel="@string/shortcut_settings_short"
		android:shortcutLongLabel="@string/shortcut_settings_long">
		<intent android:action="android.intent.action.VIEW"
			android:targetPackage="com.app.resultviewbd"
			android:targetClass="com.app.resultviewbd.activity.SettingsActivity" />
		<categories android:name="android.shortcut.filter" />
	</shortcut>

</shortcuts>
